--- a/coldwell-banker-web/src/layout/Topbar.module.css
+++ b/coldwell-banker-web/src/layout/Topbar.module.css
@@ -26,7 +26,7 @@
 }
 
 .brandLogo {
-  height: 36px; /* Más grande para el isologo */
+  height: 40px; /* Isologo Coldwell Banker */
   width: auto;
   filter: brightness(1.1);
 }
